unpackaged/main/default/objects/n2de__cls_Object__c/n2de__cls_Object__c.object-meta.xml
<CustomObject>
    <label>Classifier object</label>
    <nameField>
        <label>sObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classifier objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>