unpackaged/main/default/objects/n2de__cls_Object__c/fields/n2de__Default_map__c.field-meta.xml
<CustomField>
    <fullName>n2de__Default_map__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default map</label>
    <referenceTo>n2de__cls_Territory_map__c</referenceTo>
    <relationshipLabel>cls Linked objects</relationshipLabel>
    <relationshipName>cls_Linked_objects</relationshipName>
    <type>Lookup</type>
</CustomField>