unpackaged/main/default/objects/n2de__cls_Object__c/fields/n2de__Filters_json__c.field-meta.xml
<CustomField>
    <fullName>n2de__Filters_json__c</fullName>
    <description>Filters used to choose which map to use for each record</description>
    <label>Filters json</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>