unpackaged/main/default/objects/n2de__cls_Object__c/fields/n2de__For_auto_conversion__c.field-meta.xml
<CustomField>
    <fullName>n2de__For_auto_conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the object allowed for auto-conversion?</description>
    <label>For auto-conversion</label>
    <type>Checkbox</type>
</CustomField>