unpackaged/main/default/objects/n2de__cls_Object__c/fields/n2de__For_match__c.field-meta.xml
<CustomField>
    <fullName>n2de__For_match__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Object is used for matching but does not mean it is enabled</description>
    <label>For matching</label>
    <type>Checkbox</type>
</CustomField>