unpackaged/main/default/objects/n2de__cls_Object__c/fields/n2de__For_territory__c.field-meta.xml
<CustomField>
    <fullName>n2de__For_territory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Object is used for territory processing but does not mean it is enabled</description>
    <label>For territory processing</label>
    <type>Checkbox</type>
</CustomField>