unpackaged/main/default/objects/n2de__cls_Object__c/fields/n2de__Processing_filter_soql__c.field-meta.xml
<CustomField>
    <fullName>n2de__Processing_filter_soql__c</fullName>
    <description>Used to decide whether the record is ready to do matching</description>
    <label>Processing filter soql</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>