unpackaged/main/default/objects/n2de__cls_Object__c/fields/n2de__Processing_filter_ui_config__c.field-meta.xml
<CustomField>
    <fullName>n2de__Processing_filter_ui_config__c</fullName>
    <label>Processing filter ui config</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>